[gd_scene load_steps=4 format=3 uid="uid://cys7k0bxgd5ng"]

[ext_resource type="Script" path="res://World/menu.gd" id="1_olovm"]
[ext_resource type="Texture2D" uid="uid://b7a1jqap8spv0" path="res://Textures/Menu/Logo.png" id="2_4ad01"]
[ext_resource type="Theme" uid="uid://b4oxhfdldce3n" path="res://World/theme-button.tres" id="3_uidf7"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 32.0
offset_top = -16.0
offset_right = 32.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.92, 1)
script = ExtResource("1_olovm")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 14.0
offset_top = -187.0
offset_right = 14.0
offset_bottom = 273.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.96, 0.76)

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("2_4ad01")
expand_mode = 5
stretch_mode = 5

[node name="Jogar" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_default_cursor_shape = 2
theme = ExtResource("3_uidf7")
text = "Jogar"

[node name="Tutorial" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_default_cursor_shape = 2
theme = ExtResource("3_uidf7")
text = "Tutorial"

[node name="Créditos" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_default_cursor_shape = 2
theme = ExtResource("3_uidf7")
text = "Créditos"

[node name="Sair" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_default_cursor_shape = 2
theme = ExtResource("3_uidf7")
text = "Sair"

[connection signal="pressed" from="MarginContainer/VBoxContainer/Jogar" to="." method="_on_jogar_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Tutorial" to="." method="_on_tutorial_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Créditos" to="." method="_on_créditos_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Sair" to="." method="_on_sair_pressed"]
